feat: fix commands order on container.sh and fix removing RouteServiceProvider
